--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5",
+    "swr": "^2.2.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
