--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "swr": "^2.2.5",
     "yup": "^1.4.0"
